--- a/messaging-app-frontend/src/App.css
+++ b/messaging-app-frontend/src/App.css
@@ -1,8 +1,3 @@
 .app {
-  background: rgb(0, 212, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(0, 212, 255, 1) 12%,
-    rgba(207, 207, 230, 1) 76%
-  );
+  background: #212121;
 }
