--- a/messaging-app-frontend/src/styles/login.css
+++ b/messaging-app-frontend/src/styles/login.css
@@ -1,7 +1,20 @@
 .login-page h1 {
-  color: #6495ed;
+  color: #212121;
+}
+
+.login-page {
+  background-color: #212121;
+}
+
+.login-modal {
+  background-color: white;
 }
 
 .login-page button {
-  background-color: #6495ed;
+  background-color: #212121;
+  color: white;
+}
+
+.login-page button:hover {
+  background-color: #383838;
 }
