--- a/messaging-app-frontend/src/styles/Chat.css
+++ b/messaging-app-frontend/src/styles/Chat.css
@@ -1,7 +1,17 @@
+.chat-bg-color {
+  background-color: #212121;
+}
+.message-bg-color {
+  background-color: #dfecf5;
+}
 .chatbox {
-  height: 40rem;
+  height: calc(100vh - 114px);
 }
 .chatCreate::placeholder {
-  color: white;
+  color: black;
   opacity: 1;
+}
+
+.message-input {
+  border-top: 1px solid #363434;
 }
